--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "^7.2.96",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.12",
+    "jquery": "^3.7.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4",
     "vuetify": "^3.3.15"
